--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.app_store.show %}
-        <a href="{{ site.app_store.download_url }}" class="btn">
+        <a href="{{ site.app_store.download_url }}" class="btn-appstore">
           <svg id="livetype" xmlns="http://www.w3.org/2000/svg" width="156.10054" height="40" viewBox="0 0 156.10054 40">
             <title>Download_on_the_Mac_App_Store_Badge_US-UK_RGB_wht_092917</title>
             <g>
